--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CopernicusSystem"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCNYal8UZ0M-Mk6eC8cbJKBn6GEHHBsHfg"
+            />
+
+        <activity
+            android:name=".Recoverpass"
+            android:exported="false" />
+        <activity
+            android:name=".Website"
+            android:exported="false" />
+        <activity
+            android:name=".Forgotpass"
+            android:exported="false" />
+        <activity
+            android:name=".Login"
+            android:exported="false" />
+        <activity
+            android:name=".Register"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
